Revert "style: remove scrollbars and fix horizontal overflow"
This reverts commit c4997ed402d5e31f9b020163aa77e41b0e3444e4.

--- a/src/assets/css/tailwind.scss
+++ b/src/assets/css/tailwind.scss
@@ -12,27 +12,27 @@
 @layer base {
   /* Global Resets & Base Styles */
   html {
-    @apply h-full text-[10px] leading-[1.15] scroll-smooth overflow-x-hidden;
+    @apply h-full text-[10px] leading-[1.15] scroll-smooth;
     -webkit-text-size-adjust: 100%;
     scroll-behavior: smooth;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
-    
-    &::-webkit-scrollbar {
-      display: none; /* Chrome, Safari and Opera */
-    }
   }
 
   body {
-    @apply h-full m-0 bg-black p-0 font-blocky text-2xl font-normal leading-7 overflow-x-hidden;
+    @apply h-full m-0 bg-black p-0 font-blocky text-2xl font-normal leading-7;
     text-rendering: optimizeLegibility;
     -webkit-overflow-scrolling: touch;
     word-wrap: break-word;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
 
     &::-webkit-scrollbar {
-      display: none; /* Chrome, Safari and Opera */
+      @apply w-2.5;
+    }
+
+    &::-webkit-scrollbar-track {
+      @apply bg-gray-100;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      @apply rounded-[6px] bg-accent;
     }
   }
 
